@@ -282,7 +282,7 @@ global sint32 I_to_L (object obj)
   }
 }
 
-#if (defined(HAVE_FFI) || defined(HAVE_AFFI) || (SIZEOF_OFF_T > 4) || defined(WIN32_NATIVE)) && defined(HAVE_LONGLONG)
+#if defined(HAVE_LONGLONG)
 
 /* converts integer >=0 into unsigned quadword.
  I_to_UQ(obj)
@@ -368,7 +368,7 @@ global uint64 I_to_UQ (object obj)
 
 #endif
 
-#if defined(HAVE_FFI) && defined(HAVE_LONGLONG)
+#if defined(HAVE_LONGLONG)
 
 /* converts integer into signed quadword.
  I_to_Q(obj)
